// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matchLabels should match with non-equal matchers 1`] = `
Map {
  [
    "team",
    "operations",
  ] => {
    "match": true,
    "matcher": [
      "team",
      "=",
      "operations",
    ],
  },
}
`;

exports[`matchLabels should match with non-matching matchers 1`] = `
Map {
  [
    "team",
    "operations",
  ] => {
    "match": true,
    "matcher": [
      "team",
      "=",
      "operations",
    ],
  },
}
`;

exports[`matchLabels should not match with a set of matchers 1`] = `
Map {
  [
    "team",
    "operations",
  ] => {
    "match": true,
    "matcher": [
      "team",
      "=",
      "operations",
    ],
  },
  [
    "foo",
    "bar",
  ] => {
    "match": false,
    "matcher": null,
  },
}
`;
